# pyscaffold

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  temp_input.txt
config/: config.yml
datasets/: test_input.txt
datasets/boilerplates/: README.md
datasets/boilerplates/fastapi-template/: README.md
datasets/boilerplates/sample-template/: requirements.txt
datasets/boilerplates/sample-template/src/: main.py
docs/: Roadmap.md
src/: __init__.py  main.py
src/ai/: __init__.py
src/clients/: __init__.py
src/core/: __init__.py  config.py  generators.py  scaffold.py
src/helpers/: __init__.py  utils.py
src/services/: __init__.py  cli.py
tester/: test_scaffold.py
